# my-solana-project

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
backend/: Cargo.toml
backend/src/models/: mod.rs
programs/my_solana_project/: Cargo.toml
programs/my_solana_project/src/: lib.rs
scripts/: counter_demo.ts  counter_script.ts  test.ts  working_demo.ts
tests/: my_solana_project.ts
